[workspace]
resolver = "2"
members = ["derive-config", "derive-macros", "example"]

[workspace.package]
version = "2.3.0"
edition = "2021"
description = "My personal configuration library"
readme = "README.md"
repository = "https://github.com/ShayBox/Derive-Config"
license = "MIT"
keywords = ["serde", "derive", "config"]
categories = ["config"]

[workspace.dependencies]
derive-config = { version = "2", path = "./derive-config" }
derive-macros = { version = "2", path = "./derive-macros" }
dirs = "5"
json = { version = "1", package = "serde_json" }
toml = "0.8"
yaml = { version = "0.9", package = "serde_yaml" }
