[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
derive.workspace = true
dirs = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = ["dep:dirs", "dep:eyre"]
json = ["derive/json", "dep:json"]
toml = ["derive/toml", "dep:toml"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
