[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
derive.workspace = true
thiserror = "1"
dirs = { workspace = true, optional = true }
json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = ["dep:dirs"]
json = ["derive/json", "dep:json"]
toml = ["derive/toml", "dep:toml"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
