[package]
name = "derive-macros"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[features]
default = []
dirs = []
json = []
toml = []
yaml = []

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
