[package]
name = "example"
version.workspace = true
edition.workspace = true

[dependencies]
# derive-config = { workspace = true, features = ["json"] }
derive-config = { workspace = true, features = ["toml"] }
serde = { version = "1", features = ["derive"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
